[package]
name = "leptonica-plumbing"
version = "0.3.0"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"
description = "Safe wrapper of `leptonica-sys`"
homepage = "https://github.com/ccouzens/leptonica-plumbing"
repository = "https://github.com/ccouzens/leptonica-plumbing"
readme = "README.md"
keywords = ["leptonica", "image"]
license = "MIT"

[dependencies]
leptonica-sys = { git = "https://github.com/ntoskrnl7/leptonica-sys" }
thiserror = "1.0"

[features]
default = []
enable-static = [ "leptonica-sys/enable-static" ]